# yaml-lint-rs

./: .gitignore  .yamllint.example  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md
.cargo-husky/hooks/: pre-commit  pre-push
.claude/commands/: create-issue.md
.claude/rules/: github-issue.md  project.md  rust.md
.claude/skills/adding-rule-validation/: SKILL.md
.cursor/rules/: github-issue.mdc  project.mdc  rust.mdc
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md  generate_test_files.py  run_benchmark.sh
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: config.rs  fixer.rs  lib.rs  linter.rs  problem.rs
core/src/output/: colored.rs  mod.rs  parsable.rs  standard.rs
core/src/rules/: colons.rs  comments.rs  document_start.rs  empty_lines.rs  hyphens.rs  indentation.rs  key_duplicates.rs  line_length.rs  mod.rs  new_line_at_end_of_file.rs  trailing_spaces.rs  truthy.rs
core/tests/: config_options.rs  integration_tests.rs
docs/: RULES.md  USAGE.md
examples/: sample.yaml
homebrew/: README.md  yaml-lint.rb
make/: cli.mk  dev.mk  help.mk  release.mk  test.mk
tests/: integration_tests.rs
tests/fixtures/invalid/: bad-colons.yaml  bad-indentation.yaml  duplicate-keys.yaml  long-lines.yaml  multiple-issues.yaml  tabs-indentation.yaml  trailing-spaces.yaml
tests/fixtures/valid/: complex.yaml  empty-values.yaml  no-document-start.yaml  simple.yaml  with-document-start.yaml
