[workspace]
members = ["core", "cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Hiroki Yasui"]
license = "MIT"
repository = "https://github.com/hiromaily/yaml-lint-rs"

[workspace.dependencies]
# Shared dependencies across workspace
yaml-rust2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1.0"
