[package]
name = "yaml-lint"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A fast YAML linter written in Rust"

[[bin]]
name = "yaml-lint"
path = "src/main.rs"

[dependencies]
yaml-lint-core = { path = "../core" }
clap = { version = "4.5", features = ["derive", "cargo"] }
colored = "2.1"
anyhow = "1.0"
walkdir = "2.5"
ignore = "0.4"
