[package]
name = "yaml-lint"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A fast YAML linter written in Rust - 20-60x faster than Python yamllint"
readme = "../README.md"
keywords = ["yaml", "linter", "lint", "cli", "devtools"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "yaml-lint"
path = "src/main.rs"

[dependencies]
yaml-lint-core = { version = "0.2.0", path = "../core" }
clap = { version = "4.5", features = ["derive", "cargo"] }
colored = "2.1"
anyhow = "1.0"
walkdir = "2.5"
ignore = "0.4"
is-terminal = "0.4.17"

[dev-dependencies]
cargo-husky.workspace = true
